[package]
name = "sso-profiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
aws-config = "0.47.0"
aws-sdk-sso = "0.17.0"
aws-sdk-ssooidc = "0.17.0"
aws-types = "0.47.0"
bunt = "0.2.6"
clap = { version = "3.2.17", features = ["derive"] }
configparser = { version = "3.0.1", features = ["indexmap"] }
futures = "0.3.23"
home = "0.5.3"
indexmap = "1.9.1"
open = "3.0.2"
termcolor = "1.1.3"
tokio = { version = "1", features = ["full"]}
